# Utilities

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Shared/: CMakeLists.txt
Shared/GameTimer/include/: GameTimer.h
Shared/GameTimer/src/: GameTimer.cpp
Shared/cmake_config/: Utilities_Shared.pc.in  Utilities_Shared_Config.cmake.in
Shared/include/: LibraryExport.h
Static/: CMakeLists.txt
Static/EventSystem/include/: EventBase_t.h  EventDispatcher.h  EventDispatcher_t.h  EventSource_t.h  PlatformMessageHandler.h
Static/EventSystem/inl/: EventSource_t.inl
Static/EventSystem/src/: PlatformMessageHandler.cpp
Static/EventSystem/tests/: CMakeLists.txt
Static/EventSystem/tests/unit/: unit_EventDispatcher.cpp  unit_EventDispatcher_t.cpp
Static/Math/include/: Collision.h  Color.h  Float2.h  Float3.h  Float3x3.h  Float3x4.h  Float4.h  Float4x3.h  Float4x4.h  Int2.h  Int3.h  Int4.h  MATRIX.h  Miscellaneous.h  PackedVector.h  Plane.h  Quaternion.h  SIMDLevel.h  SSE2VectorConfig.h  Templates.h  UInt2.h  UInt3.h  UInt4.h  VectorMath.h  VectorMathConfig.h  VectorMathConstants.h
Static/Math/inl/: Collision.inl  Color.inl  Float2.inl  Float3.inl  Float3x3.inl  Float3x4.inl  Float4.inl  Float4x3.inl  Float4x4.inl  Int2.inl  Int3.inl  Int4.inl  MATRIX.inl  Miscellaneous.inl  PackedVector.inl  Plane.inl  Quaternion.inl  SSE2VectorConfig.inl  UInt2.inl  UInt3.inl  UInt4.inl
Static/Math/tests/: CMakeLists.txt
Static/Math/tests/unit/: unit_Int2.cpp
Static/Timer/include/: Timer.h
Static/Timer/src/: Timer.cpp
Static/UtilityMath/include/: Constants.h  CoordinateSystems.h  Random.h  Utility.h  UtilityMath.h
Static/UtilityMath/inl/: CoorinateSystems.inl  Random.inl  Utility.inl
Static/UtilityMath/src/: Random.cpp  Utility.cpp
Static/UtilityMath/tests/: CMakeLists.txt
Static/UtilityMath/tests/unit/: unit_CoordinateSystems.cpp  unit_Random.cpp
Static/VectorMath/include/: Collision.h  Color.h  Float2.h  Float3.h  Float3x3.h  Float3x4.h  Float4.h  Float4x3.h  Float4x4.h  Int2.h  Int3.h  Int4.h  MATRIX.h  Miscellaneous.h  PackedVector.h  Plane.h  Quaternion.h  SIMDVector.h  SIMDVectorConfig.h  SIMDVectorTemplates.h  UInt2.h  UInt3.h  UInt4.h  VectorMath.h  VectorMathConstants.h  VectorTypes.h
Static/VectorMath/inl/: Collision.inl  Color.inl  Float2.inl  Float3.inl  Float3x3.inl  Float3x4.inl  Float4.inl  Float4x3.inl  Float4x4.inl  Int2.inl  Int3.inl  Int4.inl  MATRIX.inl  Miscellaneous.inl  PackedVector.inl  Plane.inl  Quaternion.inl  SIMDVector.inl  UInt2.inl  UInt3.inl  UInt4.inl
Static/VectorMath/src/: Float4x4.cpp  MATRIX.cpp
Static/VectorMath/tests/: CMakeLists.txt
Static/VectorMath/tests/unit/: unit_Int2.cpp
Static/cmake_config/: Utilities_Static.pc.in  Utilities_Static_Config.cmake.in
cmake_config/: Utilities.pc.in  Utilities_Config.cmake.in
cmake_config/presets/: ClangLinuxPresets.json  ClangWindowsPresets.json  GCCLinuxPresets.json  MSVCWindowsPresets.json
cmake_config/scripts/: FetchLibrary.cmake  fetch_remote_latest_tag.py
cmake_config/toolchains/Linux/clang/: toolchain-Linux_clang_arm.cmake  toolchain-Linux_clang_arm64.cmake  toolchain-Linux_clang_x86.cmake  toolchain-Linux_clang_x86_64.cmake
cmake_config/toolchains/Linux/gcc/: toolchain-Linux_gcc_arm.cmake  toolchain-Linux_gcc_arm64.cmake  toolchain-Linux_gcc_x86.cmake  toolchain-Linux_gcc_x86_64.cmake
cmake_config/toolchains/Windows/clang/: toolchain-Win_clang_arm.cmake  toolchain-Win_clang_arm64.cmake  toolchain-Win_clang_x86.cmake  toolchain-Win_clang_x86_64.cmake
cmake_config/toolchains/Windows/msvc/: toolchain-Win_msvc_X86_64.cmake  toolchain-Win_msvc_arm.cmake  toolchain-Win_msvc_arm64.cmake  toolchain-Win_msvc_x86.cmake
